Bug 104670 - [CI] igt@drv_selftest@mock_fence - dmesg-fail - i915/i915_sw_fence_mock_selftests: test_dma_fence failed with error -22
Summary: [CI] igt@drv_selftest@mock_fence - dmesg-fail - i915/i915_sw_fence_mock_selft...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-17 07:33 UTC by Marta Löfstedt
Modified: 2018-01-18 07:38 UTC (History)
1 user (show)

See Also:
i915 platform: GLK
i915 features: GEM/Other


Attachments

Description Marta Löfstedt 2018-01-17 07:33:11 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4141/shard-glkb6/igt@drv_selftest@mock_fence.html

(drv_selftest:1408) igt-kmod-WARNING: Performing mock selftests with st_random_seed=0x9ebbf50f st_timeout=1000
(drv_selftest:1408) igt-kmod-WARNING: test_dma_fence failed with error -22
(drv_selftest:1408) igt-kmod-CRITICAL: Test assertion failure function igt_kselftest_execute, file igt_kmod.c:513:
(drv_selftest:1408) igt-kmod-CRITICAL: Failed assertion: err == 0
(drv_selftest:1408) igt-kmod-CRITICAL: kselftest "i915 igt__13__mock_fence=1 mock_selftests=-1 disable_display=1" failed: Invalid argument [22]
Subtest mock_fence failed.

[   54.703702] Timeout fence unsignaled!
[   54.704304] i915/i915_sw_fence_mock_selftests: test_dma_fence failed with error -22
Comment 1 Marta Löfstedt 2018-01-17 11:14:35 UTC
Now also on: 

https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3639/shard-kbl7/igt@drv_selftest@mock_fence.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3639/shard-apl8/igt@drv_selftest@mock_fence.html

(drv_selftest:1295) igt-kmod-WARNING: Performing mock selftests with st_random_seed=0x3be91ae9 st_timeout=1000
(drv_selftest:1295) igt-kmod-WARNING: test_dma_fence failed with error -22
(drv_selftest:1295) igt-kmod-CRITICAL: Test assertion failure function igt_kselftest_execute, file igt_kmod.c:513:
(drv_selftest:1295) igt-kmod-CRITICAL: Failed assertion: err == 0
(drv_selftest:1295) igt-kmod-CRITICAL: kselftest "i915 igt__13__mock_fence=1 mock_selftests=-1 disable_display=1" failed: Invalid argument [22]
Subtest mock_fence failed.

[   41.724756] Timeout fence unsignaled!
[   41.725173] i915/i915_sw_fence_mock_selftests: test_dma_fence failed with error -22

Not reproduced on GLK-shards on that run, so it looks like we have a flip/flopper!
Comment 2 Chris Wilson 2018-01-17 17:13:08 UTC
Fingers crossed,

commit ba02f4c26b37102ab030aa81d42d8021c81a43ab
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Jan 17 13:57:13 2018 +0000

    drm/i915/selftests: Wait for the dma-fence timeout
    
    When testing that the timeout fired, we need to be sure we have waited
    just long enough for the timeout to have occurred and for the softirq
    (on another cpu) to have completed. Sleeping for an arbitrary amount is
    prone to error, so wait for the timeout instead and complain if it was
    too late.
    
    v2: Use wait_event_timeout to provide an upper bound
    v3: Fix inverted check for wait_event_timeout timing out
    v4: Restore the check that the fences aren't signalled too early, by
    inspecting them before the expected timeout.
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=104670
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: Tvrtko Ursulin <tvrtko.ursulin@intel.com>
    Reviewed-by: Tvrtko Ursulin <tvrtko.ursulin@intel.com>
    Link: https://patchwork.freedesktop.org/patch/msgid/20180117135713.2324-1-chris@chris-wilson.co.uk
Comment 3 Marta Löfstedt 2018-01-18 07:38:51 UTC
Fix integrated from CI_DRM_3641 it's looking green.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.